# api_football

./: .gitignore  README.md  fetch_and_dump_data.py  pyproject.toml  requirements.txt
api_football/: __init__.py  base.py  extended.py  helper.py
